Changelog
=========

2019.4.0 (unreleased)
---------------------

- @listing endpoint: Add support for filtering by relative path depth. [lgraf]
- Update plone.restapi to latest release. [phgross]
- Add POST restapi endpint @mworkspace-invitations/{id}/{action}. [elioschmutz]
- Add GET restapi endpint @my-workspace-invitations. [elioschmutz]
- Allow range queries on deadline in listing endpoint. [njohner]
- Update and improve documentation for checked-out documents. [phgross, njohner]
- Add fields available in listing endpoint for each type to documentation. [njohner]
- Bump sablon to 0.3.1 and nokogiri to 1.9.1. [deiferni]
- Add restapi @participations endpoint to handle participations. [elioschmutz]
- Add per user configuration to deactivate inbox notifications. [njohner]
- Register ChoiceFieldDeserializer using overrides instead of configure ZCML. [lgraf]
- Update Creator, created and Date when copy/pasting an object. [njohner]
- Docs: Add tasks to documented content types. [lgraf]
- Add per user configuration to activate notifications for own actions. [njohner]
- Update ftw.solr to version 2.5.0 which allows near realtime searching. [buchi]
- Update Solr to version 8.1.1. [buchi]


2019.3.0 (2019-06-17)
---------------------

- Archiving form: Make sure dossier resolution preconditions are validated and handled. [lgraf]
- Fix encoding issue in OGDSUpdater's error logging. [lgraf]
- Provides support for some additional metadata on the search endpoint. [phgross]
- Include file_extension in API representation of documents. [phgross]
- Translate keyword-filter label. [phgross]
- Support searching on group description in sharing form. [phgross]
- Add CMFEditions modifier that prevents journals from being versioned. [lgraf]
- Forbid transitions linked to dossier offer process through RESTAPI. [njohner]
- Add an ftw.tesbrowser widget for filling responsible(s) in the tests. [Rotonen]
- Only allow dossier transitions that are possible on the main dossier. [njohner]